apps/argocd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  hostnames:
  - argocd.hoareau-marion.eu
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: virtual-management-gateway
    namespace: virtual-management
    sectionName: argocd-https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: argocd-server
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - group: ""
      kind: Service
      name: argocd-server
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /api
